samples/_failures_safe/1761478076_c41097_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df4e67a8.c: In function ‘main’:
./samples/SAFE/__tmp_df4e67a8.c:123:19: error: expected ‘;’ at end of input
  123 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_df4e67a8.c:123:13: error: expected declaration or statement at end of input
  123 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_df4e67a8.c:123:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df4e67a8.c:123:13: error: expected declaration or statement at end of input
